syntax = "proto3";

option csharp_namespace = "GrpcCalculator";

package calculator;

message SumRequest {
	int32 first_number = 1;
	int32 second_number = 2;
}

message SumReply {
	int32 result = 1;
}

message PrimeNumberDecomposeRequest{
	int32 number = 1;
}

message PrimeNumberDecomposeReply {
	int32 prime_factor = 1;
}

message ComputeAverageRequest{
	int32 number = 1;
}

message ComputeAverageReply {
	double average = 1;
}

message FindMaximumRequest{
	int32 number = 1;
}

message FindMaximumReply {
	int32 maximum = 1;
}

service CalculatorService {
	rpc Sum(SumRequest) returns (SumReply) {}
	rpc PrimeNumberDecompose(PrimeNumberDecomposeRequest) returns (stream PrimeNumberDecomposeReply) {}
	rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageReply) {}
	rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumReply) {}
}